feat(aerospace): add JankyBorders configuration for window borders
- Add 'exec-and-forget borders' to aerospace startup commands to launch borders on startup
- Create bordersrc config file with round, thin borders in magenta for active windows and grey for inactive, matching the Sketchybar theme for visual consistency and subtle window separation

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -6,6 +6,7 @@ config-version = 2
 # Startup commands
 after-startup-command = [
   'exec-and-forget sketchybar',
+  'exec-and-forget borders',
 ]
 
 # Notify Sketchybar about workspace changes
